k8s-template/argoApp/flask-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
spec:
  selector:
    app: flask-demo
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
    spec:
      containers:
      - name: flask-demo
        image: malibo8407/python36-flask-demo:v3
        ports:
        - containerPort: 8080
