k8s-template/argoApp/game-2048.yaml
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: eks-flask-demo-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: eks-flask-demo-test 
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  # namespace: eks-flask-demo-test
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP 
  selector:
    app.kubernetes.io/name: app-2048
