k8s-template/argoApp/game-2048-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-alb-ingress-shared
    alb.ingress.kubernetes.io/group.order: '20'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:533267047935:certificate/3d3d621d-acf8-44c0-a1e3-3427b94bdb4e 

spec:
  ingressClassName: alb
  rules:
    - host : gitops-test.tinyboat.blog
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 80
